k8s/oldk8/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 2
            httpGet:
              port: 80
              path: /
          livenessProbe:
            failureThreshold: 2
            httpGet:
              port: 80
              path: /
            periodSeconds: 30
            successThreshold: 1
            initialDelaySeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
