k8s/oldk8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: doggramm.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
            path: /
